# EllieEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
EllieEngine/: EllieEngine.sln
EllieEngine/Ellie-Player/: ColorPS.hlsl  ColorVS.hlsl  DemoObject.cpp  DemoObject.h  DemoScene.cpp  DemoScene.h  DemoScene.hpp  EShader.cpp  Ellie-Player.vcxproj  Ellie-Player.vcxproj.filters  Engine.cpp  Engine.hpp  PreCompiled.h  WindowsApp.cpp  WindowsApp.h  WindowsApp.hpp
EllieEngine/Ellie-Runtime/: CameraMgr.cpp  CameraMgr.h  CameraMgr.hpp  Container.h  Dx11.cpp  Dx11.h  Dx11.hpp  EComponent.cpp  EComponent.h  EGameObject.cpp  EGameObject.h  EMesh.cpp  EMesh.h  EMesh.hpp  EObject.cpp  EObject.h  EResource.cpp  EResource.h  EScene.cpp  EScene.h  EScene.hpp  EShader.h  EShader.hpp  ESprite.cpp  ESprite.h  ESprite.hpp  ETexture.cpp  ETexture.h  ETexture.hpp  Ellie-Runtime.vcxproj  Ellie-Runtime.vcxproj.filters  EllieCore.cpp  EllieCore.h  EllieCore.hpp  EllieProc.cpp  EllieProc.hpp  GameObjectMgr.cpp  GameObjectMgr.h  GameObjectMgr.hpp  IManager.hpp  (+43 more)
Source/Ellie-Player/: CMakeLists.txt  EllieEngine.cpp  EllieEngine.h
Source/Ellie-Runtime/: CMakeLists.txt
